--- a/css/style.css
+++ b/css/style.css
@@ -25,3 +25,11 @@ body,
 .btn-danger btn-success{
   border-radius: 15px ;
 }
+
+.upwards {
+  margin-top:-200px;
+}
+
+html {
+  scroll-behavior: smooth;
+}
